--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,10 +1,18 @@
-h2 {
-    color: red;
-}
 
 body {
-    padding: 20%;
+    padding: 10% 20%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: #000000;
+    background-image: linear-gradient(214deg, #000000 0%, #2a2fda 100%);
 }
 
+h2 {
+    color: white;
+    font-size: 4rem;
+}
+
+p {
+    color: white;
+    font-size: 1.3rem;
+}
