--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,9 +1,27 @@
 body {
-    padding: 20%;
+    padding: 10% 20%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: #000000;
+    background-image: linear-gradient(214deg, #000000 0%, #2a2fda 100%);
+
 }
 
 ul li {
     list-style-type: none;
+}
+
+h1 {
+    color: white;
+    font-size: 5rem;
+}
+
+p {
+    color: white;
+    font-size: 2rem;
+}
+
+a {
+    color: rgb(177, 177, 177);
+    font-size: 1.5rem;
 }
