--- a/public/css/photo-gallery.css
+++ b/public/css/photo-gallery.css
@@ -2,6 +2,8 @@ body {
     padding: 5% 20%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: #000000;
+    background-image: linear-gradient(214deg, #000000 0%, #2a2fda 100%);
 }
 
 img {
@@ -13,4 +15,9 @@ img {
 div {
     display: flex;
     flex-direction: column;
+}
+
+h2{
+    color: white;
+    font-size: 2rem;
 }
