--- a/public/css/works.css
+++ b/public/css/works.css
@@ -1,9 +1,19 @@
 body {
-    padding: 20%;
+    padding: 10% 20%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: #000000;
+    background-image: linear-gradient(214deg, #000000 0%, #2a2fda 100%);
 }
 
 ul li {
     list-style-type: none;
+    color: white;
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+h2{
+    color: white;
+    font-size: 3rem;
 }
